<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/photo_left_side"
        android:layout_width="360dp"
        android:layout_height="730dp"
        android:background="@drawable/left_page"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:alpha="0.8"
        android:gravity="center" />

    <ImageView
        android:id="@+id/frame"
        android:layout_width="333dp"
        android:layout_height="235dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/photo_frame" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/photo_rectangle"
        android:scaleType="fitXY"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/date_card"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame"

        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/date_header">
                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/calendar"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:fontFamily="@font/plume"
                    android:textSize="@dimen/edit_text_dimen"
                    android:textColor="@color/dark_brown"

                    />
            </LinearLayout>
            <TextView
                android:id="@+id/date_text"
                android:layout_below="@+id/date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plume"
                android:textSize="@dimen/edit_text_dimen"
                android:textColor="@color/dark_brown"
                android:visibility="gone"
                />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/place_card"
        android:layout_width="330dp"
        android:layout_height="200dp"

        android:layout_marginEnd="20dp"
        android:layout_marginTop="450dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/place_header">
                <ImageView
                    android:layout_height="30dp"
                    android:layout_width="30dp"
                    android:src="@drawable/place"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location_info"
                    android:fontFamily="@font/plume"
                    android:textSize="@dimen/edit_text_dimen"
                    android:textColor="@color/dark_brown"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/place_header"
                android:id="@+id/place_info"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/country_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/plume"
                    android:layout_marginEnd="17dp"
                    android:textSize="@dimen/edit_text_dimen"
                    android:textColor="@color/dark_brown" />
                <TextView
                    android:id="@+id/sub_admin_area_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/plume"
                    android:layout_below="@+id/country_text"
                    android:ellipsize="marquee"
                    android:textSize="@dimen/edit_text_dimen"
                    android:textColor="@color/dark_brown"
                    />
                <TextView
                    android:id="@+id/address_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sub_admin_area_text"
                    android:fontFamily="@font/plume"
                    android:ellipsize="marquee"
                    android:textSize="@dimen/edit_text_dimen"
                    android:textColor="@color/dark_brown"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/full_screen"
        android:clickable="false"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/description_page_button"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_edit_text"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/description"
        android:textColor="@color/cover_text"
        android:fontFamily="@font/plume"
        />
    <include
        layout="@layout/button__layout"
        android:id="@+id/buttons_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/photo_left_side"
        />

</RelativeLayout>